Update chat translation and optimize code.